Fix formatting in output for T-statistic display in Veri_Bilimi_Projesi.ipynb

--- a/Veri_Bilimi_Projesi.ipynb
+++ b/Veri_Bilimi_Projesi.ipynb
@@ -3776,8 +3776,7 @@
     "print(\"=\" * 50)\n",
     "print(f\"Card Ortalama Gelir: ${card_gelir.mean():,.2f}\")\n",
     "print(f\"PayPal Ortalama Gelir: ${paypal_gelir.mean():,.2f}\")\n",
-    "print(f\"\n",
-    "T-istatistigi: {stat:.4f}\")\n",
+    "print(f\"\nT-istatistigi: {stat:.4f}\")\n",
     "print(f\"P-degeri: {p_value:.4f}\")\n",
     "print()\n",
     "\n",
