Update target variable definition in Veri_Bilimi_Projesi.ipynb to reflect correct delivery status classification

--- a/Veri_Bilimi_Projesi.ipynb
+++ b/Veri_Bilimi_Projesi.ipynb
@@ -3978,8 +3978,8 @@
    ],
    "source": [
     "# Hedef degisken: Teslimatin zamaninda yapilip yapilmadigi\n",
-    "# 'Delivered' -> 1 (Basarili), digerleri -> 0 (Basarisiz)\n",
-    "df['Basarili_Teslimat'] = (df['DeliveryStatus'] == 'Delivered').astype(int)\n",
+    "# 'OnTime' -> 1 (Zamaninda), 'Late' -> 0 (Gecikme), digerleri -> 0 (Basarisiz)\n",
+    "df['Basarili_Teslimat'] = (df['DeliveryStatus'] == 'OnTime').astype(int)\n",
     "\n",
     "print(\"HEDEF DEGISKEN DAGILIMI\")\n",
     "print(\"=\" * 50)\n",
